# scaling-book

./: README.md  main.py  pyproject.toml
exercises/1/: 1_roofline.ipynb
exercises/2/: 4.ipynb
