[project]
name = "scaling-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flax>=0.12.7",
    "jax>=0.10.2",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "optax>=0.2.8",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "nbstripout>=0.9.1",
    "ruff>=0.15.19",
]
